app/assets/stylesheets/tailwind/components/task-list.css
@layer components {
  /*! purgecss start ignore */
  .task-list {
    @apply border-t-1 border-solid border-gray-grey2 my-gutter mx-0;
  }
  .task-list-item {
    @apply relative border-b-1 border-solid border-gray-grey2 pb-3 md:pb-0;
  }
  .task-list-item a,
  .task-list-item button {
    padding-right: 20%;
    border: none;
    @apply block py-gutterHalf px-0 relative;
  }
  .task-list-item a:hover {
    @apply text-blue-lightblue;
  }
  .task-list-item a:focus,
  .task-list-item button:focus {
    top: -1px;
    margin-bottom: -2px;
    padding-top: 16px;
    padding-bottom: 16px;
    @apply outline-yellow text-black border-transparent shadow-focusLine2;
  }

  .task-list-item:focus-within .task-list-indicator-completed {
    @apply text-black;
  }

  .task-list-indicator-completed,
  .task-list-indicator-not-completed {
    z-index: 2;
    min-width: 20%;
    margin-top: 0;
    padding: 0px 8px 1px 0px;
    top: 50%;
    transform: translateY(-50%);
    @apply text-small leading-tight font-bold inline-block right-0 pointer-events-none text-right static md:absolute;
  }

  .task-list-indicator-completed {
    /* Just a pinch of letter spacing to make reversed-out text a bit
       easier to read
    */
    letter-spacing: 0.02em;
    @apply text-green;
  }

  .task-list-indicator-not-completed {
    @apply text-black;
  }
  /*! purgecss end ignore */
}

